--- a/src/pages/RecipeEntryPage/RecipeEntryPage.scss
+++ b/src/pages/RecipeEntryPage/RecipeEntryPage.scss
@@ -7,6 +7,10 @@ section {
     gap: 4rem;
 }
 
+body {
+    padding-bottom: 2rem;
+}
+
 h2 {
     @include bottom-margin;
     align-self: flex-start;
